--- a/signin.html
+++ b/signin.html
@@ -12,7 +12,7 @@
      <input type="text" placeholder="email or phone number"> 
      <input type="password" placeholder="password"> 
      <br> 
-     <a href="profile.html" ><input type="submit" value="sign in"></a>
+     <a href="profile.html" ><p >sign in</p></a>
      <input type="checkbox" checked> 
      <label id="checkl"> Remember me </label> 
      <a href="forgot.html" class="text2"> forgot password?</a> 
