--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="public/styles.css"></head> 
    <body> 
     <header> 
-     <img src="/assets/kriova (1).png" class="head_img"> 
+     <img src="assets/kriova (1).png" class="head_img">
      <div class="sign_up"> 
       <form> 
        <label id="sign1"> sign up</label> 
